# wq

./: LICENSE  README.md  dune-project  wq.opam
.github/workflows/: pr.yaml  release.yaml
lib/: dune  parse.ml  task.ml  util.ml
migrations/: sqitch.conf  sqitch.plan
migrations/deploy/: 0001_initial.sql  0002_estimate.sql  0003_task_closed.sql  0004_config.sql  0005_lock.sql
migrations/revert/: 0001_initial.sql  0002_estimate.sql  0003_task_closed.sql  0004_config.sql  0005_lock.sql
migrations/verify/: 0001_initial.sql  0002_estimate.sql  0003_task_closed.sql  0004_config.sql  0005_lock.sql
test/: dune
